Hiding marker to avoid overlapping with text

--- a/_raw/resources/sass/layout/marker.scss
+++ b/_raw/resources/sass/layout/marker.scss
@@ -12,7 +12,7 @@
     border-radius: 100%;
     cursor: pointer;
 
-    @include bp(xlarge) {
+    @include bp(xxlarge) {
       display: none;
     }
 
