--- a/_raw/resources/sass/utils/_mixins.scss
+++ b/_raw/resources/sass/utils/_mixins.scss
@@ -5,6 +5,11 @@
 // Breakpoints
 //------------------------------------------------
 @mixin bp($point) {
+	@if $point==xxlarge {
+		@media (max-width: $bp-xxlarge) {
+			@content;
+		}
+	}
 	@if $point==xlarge {
 		@media (max-width: $bp-xlarge) {
 			@content;
