--- a/_raw/resources/sass/utils/_variables.scss
+++ b/_raw/resources/sass/utils/_variables.scss
@@ -78,6 +78,7 @@ $bp-small: 480px;
 $bp-medium: 768px;
 $bp-large: 992px;
 $bp-xlarge: 1130px;
+$bp-xxlarge: 1400px;
 
 // Animations
 //------------------------------------------------
